  (#10242).

- Use gocept.testing.

- For an article, include ressort and sub-ressort in the breadcrumbs instead
  of the repository path. (#10151)

- Restructured test layer and test cases so as to have a more reliable
  tear-down. (#10456)

- Added helpers for selenium tests: eval JS and wait for conditions in the
  current window. Also use gocept.zcapatch to register temporary views etc.


1.52.0 (2011-12-08)
-------------------

- Add handler that updates XMLReferences for MultiResources on checkin
  (for #10042).


1.51.0 (2011-12-01)
-------------------

- Provide another Remotetask-Service, "low-priority", that handles publish
  tasks serially (#10024).


1.50.2 (2011-11-24)
-------------------

- Make link an IXMLContent. It is expected from content to implement
  ICMSContent (which is implied in IXMLContent). (#10017)


1.50.1 (2011-11-13)
-------------------

- Fix brown bag release 1.50.0


1.50.0 (2011-11-13)
-------------------

- Backported test helpers and fixes from the editor-ng branch to the main
  development line.


1.49.1 (2011-06-21)
-------------------

- Fix product source so it works in the face of SecurityProxies (#9231).

- Introduce ICheckinCheckoutEvent.publishing (for #8996).


1.49.0 (2011-06-20)
-------------------

- Add SourceFactory helper for sources with a small set of fixed values (for
  #8953).

- Change ICommonMetadata.product_id to be a product object with id, title and
  VGWort-Code (for #9033).

1.48.0 (2011-03-23)
-------------------

- Generalised how checkout/checkin works so it also works for non-dav content
  (for #7826)

- Added IDAVContent for content from the original repository. This is to
  separate it from content from other repositories (like brightcove) (for
  #7826).

- Made locking support optional (for #7826)

- A view on workingcopy objects used to lookup objects directly in the
  repository. Replaced this by an ICMSContent() adapter lookup (for #7826)
